CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -w")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

SET(SOURCE_SRC
        Log/Log.cpp
        Log/LogConsole.cpp
        main.cpp
        )

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_SRC})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)